[package]
name = "jailbox"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.8.4"
tower = "0.5"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.0"
rune = { version = "0.14", features = ["emit"] }
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
